--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "AlohaMusic",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/alohaicon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/images/hawaii.png",
